force-app/main/default/objects/ARF_Cash_Forecast__c/ARF_Cash_Forecast__c.object-meta.xml
<CustomObject>
    <label>Cash Forecast</label>
    <nameField><label>Forecast Number</label><displayFormat>CF-{0000}</displayFormat><type>AutoNumber</type></nameField>
    <pluralLabel>Cash Forecasts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>