force-app/main/default/objects/ARF_Cash_Forecast__c/fields/Actual_Collections__c.field-meta.xml
<CustomField>
    <fullName>Actual_Collections__c</fullName>
    <label>Actual Collections</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>