force-app/main/default/objects/ARF_Cash_Forecast__c/fields/Invoice_Count__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Count__c</fullName>
    <label>Invoice Count</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>