force-app/main/default/objects/ARF_Cash_Forecast__c/fields/Low_Confidence_Amount__c.field-meta.xml
<CustomField>
    <fullName>Low_Confidence_Amount__c</fullName>
    <label>Low Confidence Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>