force-app/main/default/objects/ARF_Cash_Forecast__c/fields/Variance__c.field-meta.xml
<CustomField>
    <fullName>Variance__c</fullName>
    <label>Variance</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>