force-app/main/default/objects/ARF_Cash_Forecast__c/fields/Variance_Percent__c.field-meta.xml
<CustomField>
    <fullName>Variance_Percent__c</fullName>
    <label>Variance Percent</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>